CHATS_SIT/force-app/main/default/objects/batchsit_t_fcompsn_indiv_eligty_hist__x.object
<CustomObject>
    <description>batchsit$t_fcompsn_indiv_eligty_hist</description>
    <externalDataSource>Heroku_Connect_datasource</externalDataSource>
    <externalName>batchsit$t_fcompsn_indiv_eligty_hist</externalName>
    <fields>
        <fullName>cde_reason_ovrd__c</fullName>
        <description>cde_reason_ovrd</description>
        <externalDeveloperName>cde_reason_ovrd</externalDeveloperName>
        <label>Override Reason code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>createdbyid__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>createdbyid</description>
        <externalDeveloperName>createdbyid</externalDeveloperName>
        <label>Created By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>batchsit_t_fcompsn_indiv_eligty_hist1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>createddate__c</fullName>
        <description>createddate</description>
        <externalDeveloperName>createddate</externalDeveloperName>
        <label>Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>dte_change_last__c</fullName>
        <description>dte_change_last</description>
        <externalDeveloperName>dte_change_last</externalDeveloperName>
        <label>Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>dte_created_hist__c</fullName>
        <description>dte_created_hist</description>
        <externalDeveloperName>dte_created_hist</externalDeveloperName>
        <label>History Creation Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>idn_case__c</fullName>
        <description>idn_case</description>
        <externalDeveloperName>idn_case</externalDeveloperName>
        <label>Case ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>idn_case_indiv__c</fullName>
        <description>idn_case_indiv</description>
        <externalDeveloperName>idn_case_indiv</externalDeveloperName>
        <label>Case Individual ID</label>
        <length>80</length>
        <referenceTargetField>T_SBSD_CASE_INDIV__c.IDN_EXTNL__c</referenceTargetField>
        <referenceTo>T_SBSD_CASE_INDIV__c</referenceTo>
        <relationshipLabel>Individual Eligibility Legacy History</relationshipLabel>
        <relationshipName>batchsit_t_fcompsn_indiv_eligty_hist</relationshipName>
        <type>IndirectLookup</type>
    </fields>
    <fields>
        <fullName>idn_client__c</fullName>
        <description>idn_client</description>
        <externalDeveloperName>idn_client</externalDeveloperName>
        <label>Client ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>idn_eligty_fcompsn__c</fullName>
        <description>idn_eligty_fcompsn</description>
        <externalDeveloperName>idn_eligty_fcompsn</externalDeveloperName>
        <label>Family composition Eligibility ID</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>idn_eligty_fcompsn_advrs__c</fullName>
        <description>idn_eligty_fcompsn_advrs</description>
        <externalDeveloperName>idn_eligty_fcompsn_advrs</externalDeveloperName>
        <label>Family Composition Eligibility Advisor</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>idn_indiv_fcompsn__c</fullName>
        <description>idn_indiv_fcompsn</description>
        <externalDeveloperName>idn_indiv_fcompsn</externalDeveloperName>
        <label>Family Composition Individual ID</label>
        <length>50</length>
        <referenceTo>batchsit_t_fcompsn_indiv_eligty__x</referenceTo>
        <relationshipLabel>Individual Eligibility Legacy History</relationshipLabel>
        <relationshipName>batchsit_t_fcompsn_indiv_eligty_hist</relationshipName>
        <type>ExternalLookup</type>
    </fields>
    <fields>
        <fullName>idn_indiv_fcompsn_advrs__c</fullName>
        <description>idn_indiv_fcompsn_advrs</description>
        <externalDeveloperName>idn_indiv_fcompsn_advrs</externalDeveloperName>
        <label>Family Composition Individual Advisor</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>idn_indiv_fcompsn_hist__c</fullName>
        <description>idn_indiv_fcompsn_hist</description>
        <externalDeveloperName>idn_indiv_fcompsn_hist</externalDeveloperName>
        <label>Family Composition Individual Hist ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>idn_user_change_last__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>idn_user_change_last</description>
        <externalDeveloperName>idn_user_change_last</externalDeveloperName>
        <label>Last Modified By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>batchsit_t_fcompsn_indiv_eligty_hist</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ind_record_delete_logcl__c</fullName>
        <description>ind_record_delete_logcl</description>
        <externalDeveloperName>ind_record_delete_logcl</externalDeveloperName>
        <label>Logical Deleted Record</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nbr_seq_hist__c</fullName>
        <description>nbr_seq_hist</description>
        <externalDeveloperName>nbr_seq_hist</externalDeveloperName>
        <label>History Number Sequence</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>nbr_seq_indiv_case__c</fullName>
        <description>nbr_seq_indiv_case</description>
        <externalDeveloperName>nbr_seq_indiv_case</externalDeveloperName>
        <label>Individual Case Number Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>txt_cmt_ovrd__c</fullName>
        <description>txt_cmt_ovrd</description>
        <externalDeveloperName>txt_cmt_ovrd</externalDeveloperName>
        <label>Override Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>txt_values_comptd_xml__c</fullName>
        <description>txt_values_comptd_xml</description>
        <externalDeveloperName>txt_values_comptd_xml</externalDeveloperName>
        <label>XML Compounted Values</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <label>Individual Eligibility History</label>
    <pluralLabel>Individual Eligibility History</pluralLabel>
</CustomObject>